# blindspot-website

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-5e56f44e8e77d0c55be5b92da2f8a6a49e6f8781a76193e3564856c70410929b.json  query-a9b31de64a5b5d782559234a5236be4797546d84a96df61b2c22ceae3336303b.json  query-d2395e6741c41977611f4b5336237b2c5a8f52dd78abfb301802e6c4ed4ba33e.json  query-f3cf2a335ac5641d47025b414b112b0585f78d370d5fd0c6ca3ed13e733db145.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/data/: dots.ts
frontend/src/lib/components/: dots.svelte  event_card.svelte  event_detail.svelte  meunu_item.svelte  sidebar.svelte
frontend/src/lib/types/: animation_states.svelte.ts  data.ts  dot.svelte.ts  menu_itemen.svelte.ts
frontend/src/pages/: about.svelte  events.svelte  landing.svelte  main.svelte
migrations/: 20260602133424_create_users.sql  20260602143205_create_events.sql  20260602143218_create_artists.sql  20260602143240_create_event_artists.sql
src/: main.rs  stored_types.rs
src/stored_types/: artist.rs  events.rs  user.rs
