[package]
name = "blind-spot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8.9", features = ["macros"] }
axum-macros = "0.5.1"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tower = "0.5.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "chrono",
] }
dotenvy = "0.15.7"
